# modified-sparrow

./: .gitignore  Cargo.toml  a.json  convert.py  run.sh  setup.sh
.cargo/: config.toml
jagua-rs/jagua-rs/src/collision_detection/quadtree/: qt_partial_hazard.rs
jagua-rs/jagua-rs/src/entities/: container.rs  item.rs  layout.rs
jagua-rs/jagua-rs/src/geometry/: convex_hull.rs  original_shape.rs  shape_modification.rs
jagua-rs/jagua-rs/src/geometry/fail_fast/: piers.rs  pole.rs  sp_surrogate.rs
jagua-rs/jagua-rs/src/geometry/primitives/: simple_polygon.rs
jagua-rs/jagua-rs/src/io/: ext_repr.rs  import.rs
jagua-rs/jagua-rs/src/io/svg/: layout_to_svg.rs  svg_util.rs
jagua-rs/jagua-rs/src/probs/bpp/entities/: problem.rs
jagua-rs/jagua-rs/src/probs/spp/entities/: problem.rs  strip.rs
jagua-rs/jagua-rs/src/probs/spp/io/: import.rs
jagua-rs/lbf/benches/: edge_sensitivity_bench.rs  fast_fail_bench.rs  quadtree_bench.rs  util.rs
jagua-rs/lbf/src/: config.rs
jagua-rs/lbf/src/opt/: loss.rs  search.rs
jagua-rs/lbf/src/samplers/: ls_sampler.rs  rotation_distr.rs  uniform_rect_sampler.rs
jagua-rs/lbf/src/util/: assertions.rs
src/: bench.rs  config.rs  consts.rs  main.rs
src/eval/: lbf_evaluator.rs  sample_eval.rs  sep_evaluator.rs  specialized_jaguars_pipeline.rs
src/optimizer/: compress.rs  explore.rs  separator.rs
src/quantify/: mod.rs  overlap_proxy.rs  tracker.rs
src/quantify/simd/: circles_soa.rs  mod.rs  overlap_proxy_simd.rs
src/sample/: best_samples.rs  coord_descent.rs  search.rs  uniform_sampler.rs
src/util/: assertions.rs  io.rs
